content/v1.4.5/zh/api/campaign-ext/LordNeedsHorsesIssue.md
---
title: "LordNeedsHorsesIssue"
description: "LordNeedsHorsesIssue 的自动生成类参考。"
---
# LordNeedsHorsesIssue

**Namespace:** TaleWorlds.CampaignSystem.Issues
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class LordNeedsHorsesIssue`
**Base:** 无
**File:** `TaleWorlds.CampaignSystem/Issues/LordNeedsHorsesIssueBehavior.cs`

## 概述

`LordNeedsHorsesIssue` 位于 `TaleWorlds.CampaignSystem.Issues`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.Issues` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `AlternativeSolutionScaleFlags` | `public override IssueBase.AlternativeSolutionScaleFlag AlternativeSolutionScaleFlags { get; }` |
| `AlternativeSolutionBaseNeededMenCount` | `public override int AlternativeSolutionBaseNeededMenCount { get; }` |
| `IssueBriefByIssueGiver` | `public override TextObject IssueBriefByIssueGiver { get; }` |
| `IssueAcceptByPlayer` | `public override TextObject IssueAcceptByPlayer { get; }` |
| `IssueQuestSolutionExplanationByIssueGiver` | `public override TextObject IssueQuestSolutionExplanationByIssueGiver { get; }` |
| `IssueQuestSolutionAcceptByPlayer` | `public override TextObject IssueQuestSolutionAcceptByPlayer { get; }` |
| `IsThereAlternativeSolution` | `public override bool IsThereAlternativeSolution { get; }` |
| `IssueAlternativeSolutionExplanationByIssueGiver` | `public override TextObject IssueAlternativeSolutionExplanationByIssueGiver { get; }` |
| `IssueAlternativeSolutionAcceptByPlayer` | `public override TextObject IssueAlternativeSolutionAcceptByPlayer { get; }` |
| `IssueDiscussAlternativeSolution` | `public override TextObject IssueDiscussAlternativeSolution { get; }` |
| `IssueAlternativeSolutionResponseByIssueGiver` | `public override TextObject IssueAlternativeSolutionResponseByIssueGiver { get; }` |
| `IssueAlternativeSolutionSuccessLog` | `public override TextObject IssueAlternativeSolutionSuccessLog { get; }` |
| `IsThereLordSolution` | `public override bool IsThereLordSolution { get; }` |
| `Title` | `public override TextObject Title { get; }` |
| `Description` | `public override TextObject Description { get; }` |
| `Title` | `public override TextObject Title { get; }` |
| `IsRemainingTimeHidden` | `public override bool IsRemainingTimeHidden { get; }` |

## 主要方法

### ComputeMountsOverInfantryCountRatio
`public static float ComputeMountsOverInfantryCountRatio(MobileParty issueParty, out int numInfantry)`

**用途 / Purpose:** 调用 ComputeMountsOverInfantryCountRatio 对应的操作。

```csharp
// 静态调用，不需要实例
LordNeedsHorsesIssue.ComputeMountsOverInfantryCountRatio(issueParty, numInfantry);
```

### IsMountCamel
`public static bool IsMountCamel(ItemObject mountObject)`

**用途 / Purpose:** 判断当前对象是否处于 mount camel 状态或条件。

```csharp
// 静态调用，不需要实例
LordNeedsHorsesIssue.IsMountCamel(mountObject);
```

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** 将events注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
lordNeedsHorsesIssue.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** 将data同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
lordNeedsHorsesIssue.SyncData(dataStore);
```

### DoTroopsSatisfyAlternativeSolution
`public override bool DoTroopsSatisfyAlternativeSolution(TroopRoster troopRoster, out TextObject explanation)`

**用途 / Purpose:** 调用 DoTroopsSatisfyAlternativeSolution 对应的操作。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.DoTroopsSatisfyAlternativeSolution(troopRoster, explanation);
```

### IsTroopTypeNeededByAlternativeSolution
`public override bool IsTroopTypeNeededByAlternativeSolution(CharacterObject character)`

**用途 / Purpose:** 判断当前对象是否处于 troop type needed by alternative solution 状态或条件。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.IsTroopTypeNeededByAlternativeSolution(character);
```

### AlternativeSolutionCondition
`public override bool AlternativeSolutionCondition(out TextObject explanation)`

**用途 / Purpose:** 调用 AlternativeSolutionCondition 对应的操作。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.AlternativeSolutionCondition(explanation);
```

### AlternativeSolutionStartConsequence
`public override void AlternativeSolutionStartConsequence()`

**用途 / Purpose:** 调用 AlternativeSolutionStartConsequence 对应的操作。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
lordNeedsHorsesIssue.AlternativeSolutionStartConsequence();
```

### GetFrequency
`public override IssueBase.IssueFrequency GetFrequency()`

**用途 / Purpose:** 读取并返回当前对象中 frequency 的结果。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.GetFrequency();
```

### IssueStayAliveConditions
`public override bool IssueStayAliveConditions()`

**用途 / Purpose:** 创建或发起stay alive conditions。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.IssueStayAliveConditions();
```

### GetAlternativeSolutionSkill
`public override ValueTuple<SkillObject, int> GetAlternativeSolutionSkill(Hero hero)`

**用途 / Purpose:** 读取并返回当前对象中 alternative solution skill 的结果。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
var result = lordNeedsHorsesIssue.GetAlternativeSolutionSkill(hero);
```

### OnFailed
`public override void OnFailed()`

**用途 / Purpose:** 在 failed 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 LordNeedsHorsesIssue 实例
LordNeedsHorsesIssue lordNeedsHorsesIssue = ...;
lordNeedsHorsesIssue.OnFailed();
```

## 使用示例

```csharp
LordNeedsHorsesIssue.ComputeMountsOverInfantryCountRatio(issueParty, numInfantry);
```

## 参见

- [本区域目录](../)